.provarCaches/00D5f000005vwGkEAI/objects/rstk__pebomovr__c.object
<CustomObject>
    <description>pebomovr__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__pebomovr_parentpebom__r.rstk__pebom_compitem__r.rstk__peitem_item__c  &amp; &apos; - &apos; &amp; TEXT(rstk__pebomovr_dmdlne__c) &amp; &apos;(&apos; &amp;  LEFT(rstk__pebomovr_parentpebom__r.rstk__pebom_compitem__r.rstk__peitem_descr__c ,25) &amp; &apos;)&apos;</formula>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pebomovr_dmdlne__c</fullName>
        <description>This is the line that will be the unique identifier within the full qualification of the Bill of Material key (including Add Rev). This will also be the line used to create the WOORDDMD_LNE record when creating Work Order Demands from a Bill of Material. (DD)</description>
        <inlineHelpText>This is the line that will be the unique identifier within the full qualification of the Bill of Material key (including Add Rev).  This will also be the line used to create the WOORDDMD_LNE record when creating Work Order Demands from a Bill of Material.</inlineHelpText>
        <label>Demand Line</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pebomovr_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>BOM Override Division</inlineHelpText>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Eng BOM Overrides</relationshipLabel>
        <relationshipName>Eng_BOM_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pebomovr_ltoffset__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of days later after initial pick that the Qty Per of this component is required at the Work Center and Process referenced below. 

MRP will use this in its planning process and set the WOORDDMD_DUEDTE (or ICREQDMD_DUEDATE in the case of subcontract requisitions) – versus using the WOORDDMD_SCHEDPICKDTE. (DD)</description>
        <inlineHelpText>The number of days after the work order start date that  the Qty Per of this component is required at the Work Center and Process referenced in the routing.</inlineHelpText>
        <label>Lead Time Offset</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pebomovr_parentpebom__c</fullName>
        <inlineHelpText>Parent Item Number that this override will affect.</inlineHelpText>
        <label>Parent Engineering BOM</label>
        <referenceTo>rstk__pebom__c</referenceTo>
        <relationshipLabel>Eng BOM Overrides</relationshipLabel>
        <relationshipName>pebomovrs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__pebomovr_procno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The process at which the component is required at a later time (days later defined by Lead Time Offset above). 

In a centralized engineering environment, the Process Number is validated using  the Process Table in the Inventory Division as specified by the PEITEM_INVDIV. 

In a decentralized engineering environment, the Process Number is validated using  the Process Table in the Inventory Division as specified by the PEBOMOVR_DIV. (DD)</description>
        <inlineHelpText>Process number associated with this Operation</inlineHelpText>
        <label>Process No</label>
        <referenceTo>rstk__rtproc__c</referenceTo>
        <relationshipLabel>Eng BOM Overrides</relationshipLabel>
        <relationshipName>PEBOMOVRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pebomovr_qtyper__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The quantity of the parent Eng BOM record that is overridden by this Eng BOM Override. (DD)</description>
        <inlineHelpText>The quantity of the component item that is overridden by this Eng BOM Override. It may or may not be the entire qty of this item.. Other amounts may be used up on the 1st operation or other overrides.</inlineHelpText>
        <label>Qty Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pebomovr_scrappcnt__c</fullName>
        <inlineHelpText>Scrap factor is the amount of this component that will be lost during the manufacturing process, expressed as a percent.  MRP will compensate for the scrap factor when determining the quantity required.</inlineHelpText>
        <label>Scrap Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pebomovr_setupqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Setup Quantity is the amount of this component that will be used during setup.  This amount is in addition to the standard quantity per plus scrap factor, if any.  MRP will account for setup amounts when calculating total requirements.</inlineHelpText>
        <label>Setup Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pebomovr_wctr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The work center at which the component is required at a later time (days later defined by Lead Time Offset above). 

Only applied to Qty Per of this override. 

In a centralized engineering environment, the Work Center is validated using  the Work Center Table in the Inventory Division as specified by the PEITEM_INVDIV. 

In a decentralized engineering environment, the Work Center is validated using  the Work Center Table in the Inventory Division as specified by the PEBOMOVR_DIV. (DD)</description>
        <inlineHelpText>The Work Center alternate that will be used as a result of this override.</inlineHelpText>
        <label>Work Center</label>
        <referenceTo>rstk__rtwctr__c</referenceTo>
        <relationshipLabel>Eng BOM Overrides</relationshipLabel>
        <relationshipName>PEBOMOVRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Eng BOM Override</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eng BOM Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Non_negative_LT_Offset</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pebomovr_ltoffset__c &lt;0</errorConditionFormula>
        <errorMessage>Please enter a non-negative Lead Time Offset.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Non_negative_Setup_Qty</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pebomovr_setupqty__c  &lt; 0</errorConditionFormula>
        <errorMessage>Please enter a non-negative Setup Quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Process_No_Division</fullName>
        <active>true</active>
        <description>Process No Division must match Inventory Division</description>
        <errorConditionFormula>rstk__pebomovr_procno__c != null &amp;&amp; rstk__pebomovr_procno__r.rstk__rtproc_div__c != rstk__pebomovr_invdiv__c</errorConditionFormula>
        <errorMessage>Process No Division must match Inventory Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Scrap_Pcnt</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pebomovr_scrappcnt__c &lt;0 || rstk__pebomovr_scrappcnt__c &gt;=1</errorConditionFormula>
        <errorMessage>Please enter a Scrap Factor greater than or equal to 0 and less than 1.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Work_Center_Division</fullName>
        <active>true</active>
        <description>Work Center Division must match Inventory Division</description>
        <errorConditionFormula>rstk__pebomovr_wctr__c != null &amp;&amp;  rstk__pebomovr_wctr__r.rstk__rtwctr_div__c !=  rstk__pebomovr_invdiv__c</errorConditionFormula>
        <errorMessage>Work Center Division must match Inventory Division</errorMessage>
    </validationRules>
</CustomObject>